try to deploy byt fail